fix spacing for portfolio gifs

--- a/0lga.ca/src/components/portfolio/portfolio.css
+++ b/0lga.ca/src/components/portfolio/portfolio.css
@@ -56,8 +56,10 @@
     gap: 1.2rem;
   }
   .clicked{
-    transform: scale(1.3);
+    transform: scale(1.5);
   }
+
+
 }
 
 /* ---------------- Media Queries (Small Devices) ---------------- */
@@ -66,12 +68,15 @@
     grid-template-columns: 1fr;
     gap: 1rem;
   }
+  .portfolio__item-image {
+    border-radius: 0.8rem;
+  }
   .clicked {
-    width:80vh;
-    transform: rotate(-90deg);
-    position: absolute;
+    transform: rotate(-90deg) scale(3);
+    position: static;
     z-index: 1;
-    margin-left: -87%;
+    margin: auto;
+    padding: 1.3rem;
   }
 
 }
